<resources>
    <string name="app_name">山てんき</string>
    <string name="button_main_20_closest_search">近くの山\n20選</string>
    <string name="button_main_name_search">名前\nで探す</string>
    <string name="button_main_area_search">エリア\nで探す</string>
    <string name="button_main_height_search">標高\nで探す</string>
    <string name="button_main_my_mountain_list">Ｍｙ山\nリスト</string>
    <string name="button_main_memo">登った山\nメモ</string>
    <string name="button_main_settings">詳細設定</string>
    <string name="button_main_tool_list">持ち物</string>
    <string name="text_main_header">山サーチ</string>
    <string name="text_search_name_header">山の名前で探す</string>
    <string name="text_search_textbox_hint">漢字やひらがな検索</string>
    <string name="text_search_table_header_name">名前</string>
    <string name="text_search_table_header_difficulty">現在の登山指数</string>
    <string name="text_search_table_header_height">標高</string>
    <string name="text_unset">NA</string>
    <string name="text_forecast_table_time">時間</string>
    <string name="text_forecast_table_day">月／日</string>
    <string name="text_forecast_table_difficulty">山行指数</string>
    <string name="text_forecast_atmospheric_temperature">気温（°C）</string>
    <string name="text_forecast_wind_speed">風（m/s）</string>
    <string name="text_forecast_rain_level">積算降水量 (mm)</string>
    <string name="text_forecast_cloud_cover">雲量（地上面）</string>
    <string name="text_search_area_header">エリアで探す</string>
    <string name="text_search_height_range">~</string>
    <string name="text_closest_mountain_header">近くの山20選</string>
    <string name="button_area_hokkaidou">北海道</string>
    <string name="button_area_touhoku">東北</string>
    <string name="button_area_hokuriku">北陸</string>
    <string name="button_area_koushin">関東・甲信</string>
    <string name="button_area_toukai">東海</string>
    <string name="button_area_kinki">近畿</string>
    <string name="button_area_chuugoku">中国</string>
    <string name="button_area_shikoku">四国</string>
    <string name="button_area_okinawa">九州・沖縄</string>
    <string name="text_search_height_m">m</string>
    <string name="text_search_height_header">標高で探す</string>
    <string name="error_min_max_height">最低標高は最高標高を超えないでください</string>
    <string name="text_my_mountain_list_header">Ｍｙ山リスト</string>
    <string name="button_add_my_mountain">Ｍｙ山リスト\nに登録</string>
    <string name="button_remove_my_mountain">Ｍｙ山リスト\nから登録解除</string>
    <string name="button_add_memo">登った山メモ\nに登録</string>
    <string name="text_memo_header">登った山メモ</string>
    <string name="text_memo_time_edit">日時：　</string>
    <string name="text_memo_time_view">日時　　</string>
    <string name="text_memo_from">から</string>
    <string name="text_memo_until">まで</string>
    <string name="text_memo_weather_edit">天候：　</string>
    <string name="text_memo_weather_view">天候　　</string>
    <string name="text_memo_rating_edit">評価：　</string>
    <string name="text_memo_rating_view">評価　　</string>
    <string name="text_memo_memo_edit">メモ：　</string>
    <string name="text_memo_memo_view">メモ　　</string>
    <string name="text_memo_activity_time">活動時間</string>
    <string name="text_memo_ten_points">/10点</string>
    <string name="text_memo_hint">山の特徴、感想、出来事など。</string>
    <string name="button_confirm">決定</string>
    <string name="error_memo_dates_reversed">開始時間より前です。</string>
    <string name="text_memo_list_header">登った山メモ</string>
    <string name="text_memo_table_header_name">名前</string>
    <string name="text_memo_table_header_rating">評価</string>
    <string name="text_memo_table_header_date">日時</string>
    <string name="text_rating_hint">6</string>
    <string name="text_weather_hint">晴れのち曇り</string>
    <string name="button_edit">内容変更</string>
    <string name="button_delete">削除</string>
    <string name="dialog_delete_message">本当にこのメモを消しますか？</string>
    <string name="button_confirm_delete">削除</string>
    <string name="button_cancel">戻る</string>
    <string name="text_rating_min">1</string>
    <string name="text_rating_max">10</string>
    <string name="sort_asc">▲</string>
    <string name="sort_desc">▼</string>
    <string name="checklist_header">持ち物</string>
    <string name="checklist_explain">持ち物は場所、スタイル、日数、時期によって必要な道具も変わってきます。編集してお使いください。</string>
    <string name="button_edit_checklist">編集</string>
    <string name="button_editing_checklist">編集中</string>
    <string name="button_new_checklist">追加</string>
    <string name="help_text_wind_speed">風速0.3m/s未満：静穏\n10m/s以上15m/s未満：やや強い風\n15m/s以上20m/s未満：強い風\n20m/s以上30m/s未満：非常に強い風</string>
    <string name="help_text_difficulty">山行指数とは? \n\n山行指数とは、登山をするための快適さを 気温・風・積算降水量・雲量を元に独自計 算し A~C で表現をしています。\nまた山頂付近の天気は麓付近とは異なる場 合がありますので、ご注意ください。\n登山指数には火山の噴火や地震、台風や積 雪に関する情報は含まれておりません。</string>
    <string name="help_text_cloud_cover">0：無雲\n1：晴れ\n2：雲が散在\n3：軽度の曇り\n4：部分的に曇り\n5：中程度の曇り\n6：大部分が曇り\n7：ほぼ全天が曇り\n8：全天が曇り\n9：不明\n-：計測なし</string>
    <string name="item_desc_icon_facebook">Facebook icon</string>
    <string name="item_desc_icon_line">LINE icon</string>
    <string name="item_desc_icon_twitter">Twitter icon</string>
    <string name="item_desc_icon_mail">Mail icon</string>
    <string name="item_desc_icon_maps">Google Maps icon</string>
    <string name="text_settings_header">詳細設定</string>
    <string name="text_forecast_warning">気象情報ご利用上の注意\n\n高度別の値は気象予測の数値計算結果です。天気予報ではありませんので、地形や日射などの影響により山岳では値が大きく異なる場合がありますので十分ご注意ください。\nなお、山行指数には積雪・雪崩や火山の噴火に関する情報や含まれておりませんのでご注意ください。</string>
    <string name="text_setting_subscription_title">チケット購入状況</string>
    <string name="text_setting_subscription_subtitle_false">チケットの購入がありません。</string>
    <string name="text_setting_subscription_subtitle_true">現在のチケット有効日数は%d日です。</string>
    <string name="text_setting_title_warning">各山の注意喚起を表示しない</string>
    <string name="text_setting_title_mobile">情報の更新はWi-Fiのみでする</string>
    <string name="text_setting_title_checklist_reset">持ち物リストの一括リセット</string>
    <string name="text_powered_by">Powered by 山てんき</string>
    <string name="item_desc_facebook_preview">Facebook image preview</string>
    <string name="dialog_facebook">Facebook</string>
    <string name="button_post">投稿する</string>
    <string name="toast_facebook_post_success">投稿に成功しました！</string>
    <string name="toast_facebook_post_fail">投稿に失敗しました。。。</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="text_dialog_sns_not_installed">%sがインストールされていません。インストールしますか？</string>
    <string name="text_license_agreement">山てんき（気象情報）ご利用上の注意\n高度別の値は気象予測の数値計算結果です。天気予報ではありませんので、地形や日射などの影響により山岳では値が大きく異なる場合がありますので十分ご注意ください。\n\n山行指数は登山の快適さを保証するものではありません気温・積算降水量・風速を元に計算された指標なので、各自の判断が重要となります。\n\n自然と向き合うという事は決して安全な行為とは言えません、軽装備や装備不足、体調不良など、安易な判断での登山は控えましょう。</string>
    <string name="text_license_agreement_title">注意喚起</string>
    <string name="checkbox_license_agreement">上記の文章を理解しました</string>
    <string name="button_license_agreement_disagree">同意しない</string>
    <string name="button_license_agreement_agree">同意する</string>
    <string name="dialog_downloading_list">山リストを更新中…</string>
    <string name="dialog_downloading_status">山行指数を更新中…</string>
    <string name="dialog_updating_forecast">山情報を更新中…</string>
    <string name="text_weekly_forecast_header">週間予測</string>
    <string name="text_weekly_forecast_subheader">各日 9 時時点の情報を表示しています。</string>
    <string name="text_subscription_details">すべてのチケットは自動更新となっております。更新しない場合やチケットの変更は更新日の前日までに利用の停止・変更を行ってください。詳しくはヘルプをご覧ください。</string>
    <string name="text_subscription">チケット</string>
    <string name="text_automatic_renewal">自動更新</string>
    <string name="text_monthly_cost">¥%s/月</string>
    <string name="text_payment_amount">お支払金額¥%s</string>
    <string name="dialog_my_mountain_subscription">２件以上登録したい場合はチケットを購入してください。</string>
    <string name="dialog_memo_subscription">２件以上登録したい場合はチケットを購入してください。</string>
    <string name="text_subscription_not_subscribed">現在チケットの購入はありません</string>
    <string name="text_subscription_subscribed">現在%sチケットを購入中</string>
    <string name="button_view_subscription_plans">プランを見る</string>
    <string name="text_go_to_subscription_screen">チケットを見に行く 月額¥100~</string>
    <string name="text_dialog_please_wait">しばらくお待ちください</string>
    <string name="toast_height_min_max_error">標高は「最低値〜最高値」の順に入力してください。</string>
    <string name="toast_google_account_not_setup">この携帯のGoogleアカウントが設定されていません。</string>
    <string name="toast_error_location_denied">位置情報の使用を許可しない場合は「近くの山20選」を使えません。</string>
    <string name="toast_error_location_dont_ask_again">「近くの山20選」を使う場合は位置情報の使用を許可してください。設定＞アプリ＞YamaTenki>許可＞位置情報</string>
    <string name="button_main_map">山行地図\nで探す</string>
    <string name="toast_error_no_connection_wifi">情報が更新できません。\n圏外、もしくは詳細設定内の「情報更新」を確認ください。\n詳細設定はトップページから入れます。</string>
    <string name="one_year">１年</string>
    <string name="six_months">６ヶ月</string>
    <string name="one_month">１ヶ月</string>
    <string name="table_help_temperature">気温\n（°C）</string>
    <string name="table_help_wind_speed">風\n（m/s）</string>
    <string name="table_help_rain_level">積算降水量\n(mm)</string>
    <string name="text_forecast_table_height_pressure">高度 %1$sm 付近（%2$shPa)</string>
    <string name="text_weekday_monday">月</string>
    <string name="text_weekday_tuesday">火</string>
    <string name="text_weekday_wednesday">水</string>
    <string name="text_weekday_thursday">木</string>
    <string name="text_weekday_friday">金</string>
    <string name="text_weekday_saturday">土</string>
    <string name="text_weekday_sunday">日</string>
    <string name="text_day_name_today">本日</string>
    <string name="text_day_name_tomorrow">明日</string>
    <string name="text_time_of_day_AM">午前</string>
    <string name="text_time_of_day_PM">午後</string>
    <string name="text_search_area_result_header">%sの山</string>
    <string name="text_sn_date">%1$s月%2$s日　本日の山行指数"</string>
    <string name="text_setting_language_title">言語</string>
    <string name="text_setting_language_subtitle_default">既定</string>
    <string name="text_setting_language_subtitle_english">英語</string>
    <string name="text_setting_language_subtitle_japanese">日本語</string>
    <string name="text_forecast_height_string">%sm</string>
    <string name="text_help_coordinates">測定点は %1$sN %2$sE</string>
</resources>