<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    style="@style/YamaTenkiActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/memo_header"
        style="@style/ScreenTitle"
        android:text="@string/text_memo_header"/>

    <TextView
        android:id="@+id/text_memo_mountain_name"
        style="@style/LargeBrownText"
        android:layout_width="wrap_content"
        android:layout_below="@id/memo_header"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/text_memo_time"
        style="@style/MediumBrownText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/text_memo_mountain_name"
        android:text="@string/text_memo_time_edit"/>

    <EditText
        android:id="@+id/memo_date_from"
        style="@style/MediumBrownText"
        android:layout_width="0dp"
        android:layout_alignBaseline="@id/text_memo_time"
        android:layout_below="@id/text_memo_mountain_name"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_toEndOf="@id/text_memo_time"
        android:layout_toRightOf="@id/text_memo_time"
        android:background="@drawable/round_edittext"
        android:focusable="false"
        android:inputType="datetime"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/hint_text"
        app:layout_widthPercent="60%"/>

    <TextView
        android:id="@+id/text_memo_from"
        style="@style/MediumBrownText"
        android:layout_alignBaseline="@id/memo_date_from"
        android:layout_below="@id/text_memo_mountain_name"
        android:layout_toEndOf="@id/memo_date_from"
        android:layout_toRightOf="@id/memo_date_from"
        android:text="@string/text_memo_from"/>

    <EditText
        android:id="@+id/memo_date_until"
        style="@style/MediumBrownText"
        android:layout_width="0dp"
        android:layout_below="@id/memo_date_from"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_toEndOf="@id/text_memo_time"
        android:layout_toRightOf="@id/text_memo_time"
        android:background="@drawable/round_edittext"
        android:focusable="false"
        android:inputType="datetime"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/hint_text"
        app:layout_widthPercent="60%"/>

    <TextView
        android:id="@+id/text_memo_until"
        style="@style/MediumBrownText"
        android:layout_alignBaseline="@id/memo_date_until"
        android:layout_below="@id/memo_date_from"
        android:layout_toEndOf="@id/memo_date_until"
        android:layout_toRightOf="@id/memo_date_until"
        android:text="@string/text_memo_until"/>

    <TextView
        android:id="@+id/text_memo_activity_time"
        style="@style/MediumBrownText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/memo_date_until"
        android:text="@string/text_memo_activity_time"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/memo_activity_time"
        style="@style/MediumBrownText"
        android:layout_alignBaseline="@id/text_memo_activity_time"
        android:layout_below="@id/memo_date_until"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/text_memo_activity_time"
        android:layout_toRightOf="@id/text_memo_activity_time"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/text_memo_weather"
        style="@style/MediumBrownText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/memo_activity_time"
        android:text="@string/text_memo_weather_edit"/>

    <EditText
        android:id="@+id/memo_weather"
        style="@style/MediumBrownText"
        android:layout_alignBaseline="@id/text_memo_weather"
        android:layout_below="@id/memo_activity_time"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@id/text_memo_weather"
        android:layout_toRightOf="@id/text_memo_weather"
        android:background="@drawable/round_edittext"
        android:hint="@string/text_weather_hint"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/hint_text"
        app:layout_widthPercent="40%"/>

    <TextView
        android:id="@+id/text_memo_rating"
        style="@style/MediumBrownText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/memo_weather"
        android:text="@string/text_memo_rating_edit"/>

    <EditText
        android:id="@+id/memo_rating"
        style="@style/MediumBrownText"
        android:layout_alignBaseline="@id/text_memo_rating"
        android:layout_below="@id/memo_weather"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_toEndOf="@id/text_memo_rating"
        android:layout_toRightOf="@id/text_memo_rating"
        android:background="@drawable/round_edittext"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/text_rating_hint"
        android:inputType="none"
        android:maxLength="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/hint_text"
        app:layout_widthPercent="15%"/>

    <TextView
        style="@style/MediumBrownText"
        android:layout_alignBaseline="@id/memo_rating"
        android:layout_below="@id/memo_weather"
        android:layout_toEndOf="@id/memo_rating"
        android:layout_toRightOf="@id/memo_rating"
        android:text="@string/text_memo_ten_points"/>

    <TextView
        android:id="@+id/text_memo_memo"
        style="@style/MediumBrownText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/memo_rating"
        android:layout_marginBottom="5dp"
        android:text="@string/text_memo_memo_edit"/>

    <EditText
        android:id="@+id/memo_memo"
        style="@style/MediumBrownText"
        android:layout_width="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/text_memo_memo"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_edittext"
        android:gravity="start"
        android:hint="@string/text_memo_hint"
        android:padding="5dp"
        android:textColorHint="@color/hint_text"
        app:layout_heightPercent="30%"/>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/memo_memo"
        android:layout_alignRight="@id/memo_memo"
        android:layout_below="@id/memo_memo"
        android:background="@drawable/round_button_orange"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/button_confirm"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/memo_memo"
        android:layout_alignRight="@id/memo_memo"
        android:layout_below="@id/memo_memo"
        android:background="@drawable/round_button_green"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/button_edit"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/memo_memo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button_gray"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/button_delete"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

</android.support.percent.PercentRelativeLayout>