<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/memo_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/MediumBrownText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/table_header_name"
            android:text="@string/text_search_table_header_name"
            android:clickable="true"
            android:layout_weight=".70"
            android:gravity="start"
            android:paddingTop="10dp"/>

        <TextView
            style="@style/MediumBrownText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_header_rating"
            android:text="@string/text_memo_table_header_rating"
            android:clickable="true"
            android:layout_weight=".15"
            android:gravity="center"
            android:paddingTop="10dp"/>

        <TextView
            style="@style/MediumBrownText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table_header_date"
            android:text="@string/text_memo_table_header_date"
            android:clickable="true"
            android:layout_weight=".35"
            android:gravity="end"
            android:paddingTop="10dp"/>

    </LinearLayout>

    <View style="@style/Divider"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_memos"
        android:clickable="false"/>

    <View style="@style/Divider"/>

</LinearLayout>